# aibooster-drillmusic

./: .gitignore  README.md  pyproject.toml
.cursor/plans/: drillmusic_app_개발_ef655156.plan.md
ai-driven-development/: .editorconfig  .env.example  .gitignore  AI_DJ_Assist_PRD_v1.0.docx  CONTRIBUTING.md  Cargo.toml  DrillMusic_Roadmap.md  README.md  package-lock.json  package.json
ai-driven-development/.claude/: settings.json
ai-driven-development/apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
ai-driven-development/apps/desktop/src-tauri/icons/: icon.icns
ai-driven-development/apps/desktop/src-tauri/sidecars/: ai-dj-analysis-aarch64-apple-darwin
ai-driven-development/apps/desktop/src-tauri/src/: main.rs
ai-driven-development/apps/desktop/src-tauri/src/commands/: analysis.rs  audio.rs  midi.rs  mod.rs
ai-driven-development/apps/desktop/src-tauri/src/sidecar/: mod.rs
ai-driven-development/scripts/: bundle-sidecar-win.ps1  bundle-sidecar.sh  check-architecture.sh  setup.sh
ai/src/: ReadMe.md  main.py  main_2.py  req.txt  run.sh
app/: .gitignore  README.md  TEST_RESULTS.md  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json  tsconfig.tsbuildinfo
app/dist-electron/: main.js
app/electron/: main.ts  preload.ts
app/src/: App.tsx  index.css  vite-env.d.ts
human-driven-development/: README.md
human-driven-development/ai/: .gitignore  tracklist_rag.py
human-driven-development/app/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.electron.json  (+1 more)
report/: week1.md  week2.md  week3.md  week4.md
(+184 files in other folders)
