[package]
name = "ai-dj-assist-desktop"
version = "0.1.0"
edition = "2021"
description = "AI DJ Assist Tauri desktop backend"

[[bin]]
name = "ai-dj-assist-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ai-dj-dsp = { path = "../../../packages/dsp" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2"
